tests/snapshots/compile_core_o_no_all__list_reverse.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_no_all/list_reverse.hvm
---
[4m[1m[31mErrors:[0m
[1mThe following functions contain recursive cycles incompatible with HVM's strict evaluation:[0m
  * concat -> concat
  * reverse -> reverse

The greedy eager evaluation of HVM may cause infinite loops.
[1mRefactor these functions to use lazy references instead of direct function calls.[0m
A reference is strict when it's being called ('(Foo x)') or when it's used non-linearly ('let x = Foo; (x x)').
It is lazy when it's an argument ('(x Foo)') or when it's used linearly ('let x = Foo; (x 0)').

[1mTry one of these strategies:[0m
- Use pattern matching with 'match', 'fold', and 'bend' to automatically lift expressions to lazy references.
- Replace direct calls with combinators. For example, change:
    'Foo = λa λb (b (λc (Foo a c)) a)'
  to:
    'Foo = λa λb (b (λc λa (Foo a c)) (λa a) a)'
  which is lifted to:
    'Foo = λa λb (b Foo__C1 Foo_C2 a)'
- Replace non-linear 'let' expressions with 'use' expressions. For example, change:
    'Foo = λf let x = Foo; (f x x)'
  to:
    'Foo = λf use x = Foo; (f x x)'
  which inlines to:
    'Foo = λf (f Foo Foo)'
- If disabled, re-enable the default 'float-combinators' and 'linearize-matches' compiler options.

For more information, visit: https://github.com/HigherOrderCO/hvm-lang/blob/main/docs/lazy-definitions.md.
To disable this check, use the "-Arecursion-cycle" compiler option.
