tests/snapshots/compile_core_o_no_all__redex_order.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_no_all/redex_order.hvm
---
@a = (a a)

@b = (a a)

@bar = i
  & @a ~ (d (h i))
  & @b ~ (a (c d))
  & @c ~ (0 a)
  & @c ~ (b c)
  & @d ~ (1 b)
  & @b ~ (f (g h))
  & @c ~ (e f)
  & @d ~ (2 e)
  & @c ~ (3 g)

@c = (a a)

@d = (a a)

@foo = (a d)
  & @a ~ (c d)
  & @b ~ (b c)
  & @c ~ (a b)

@foo2 = c
  & @a ~ (b c)
  & @b ~ (a b)
  & @c ~ (0 a)

@main = a
  & @foo ~ (@foo2 a)
